Unify docs around current system behavior